Add intro chapter

--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -1,6 +1,6 @@
 #######################################################################################
 # Book settings
-title: "Java Tutorial"
+title: "<b><i>AnIML</i></b><br/> Another Introduction to Machine Learning"
 author: "Hunter Schafer"
 copyright: "2022"
 logo: _static/logo.png
