--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -1,11 +1,16 @@
 format: jb-book
 root: intro/index
-chapters:
-  - file: printing
-  - file: variables_expressions
-  - file: if_statements
-  - file: loops
-  - file: strings
-  - file: methods
-  - file: io_files
-  - file: arrays
+parts:
+  - caption: 1. Regression
+    chapters:
+      - file: regression/linear_regression/index
+  - caption: 6. Others
+    chapters:
+      - file: printing
+      - file: variables_expressions
+      - file: if_statements
+      - file: loops
+      - file: strings
+      - file: methods
+      - file: io_files
+      - file: arrays
