Finish some todos including images/videos

--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -58,5 +58,10 @@ sphinx:
     - "sphinxcontrib.video"
   config:
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+    mathjax3_config:
+      tex:
+        macros:
+          "argmin": ["\\underset{#1}{\\operatorname{argmin}}", 1]
+          "argmax": ["\\underset{#1}{\\operatorname{argmax}}", 1]
     suppress_warnings:
       - "myst.header"
