--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -55,6 +55,7 @@ sphinx:
     - "sphinx_comments"
     - "sphinx_copybutton"
     - "sphinx_design"
+    - "sphinx_proof"
     - "sphinxcontrib.video"
   config:
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
