--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -8,7 +8,7 @@ logo: _static/logo.png
 #######################################################################################
 # Execution settings
 execute:
-  execute_notebooks: "off"
+  execute_notebooks: "auto"
 
 #######################################################################################
 # Parse and render settings
