--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 click>=8.0.0
 jupyter-book>=0.13
+jupyterquiz
+jupytercards
 pandas==1.3.2
 pytablewriter==0.62.0
-sklearn==1.1.2
-sphinxcontrib-video>=0.0.1
+scikit-learn==1.1.2
+#sphinxcontrib-video>=0.0.1
 sphinx-proof>=0.1.3
