--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Set up Python
+      - name: Set up Python 🐍
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
       - name: Install and Build 🔧
         run: |
+          sudo apt install libcairo2-dev libpango1.0-dev ffmpeg
           pip install -r requirements.txt
           make html-deploy
 
