--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          sudo apt install libcairo2-dev libpango1.0-dev ffmpeg
+          sudo apt install libcairo2-dev libpango1.0-dev ffmpeg texlive
           pip install -r requirements.txt
           make html-deploy
 
