--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           sudo apt install libcairo2-dev libpango1.0-dev ffmpeg texlive-latex-extra
           pip install -r requirements.txt
-          make html-deploy
+          make html  # TODO set up manim to build on Github Actions
 
       - name: Deploy 🚀
         if: github.event_name == 'push'
