--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ manim
 pandas==1.3.2
 pytablewriter==0.62.0
 scikit-learn==1.1.2
-sphinxcontrib-video>=0.0.1
+sphinxcontrib-video
 sphinx-proof>=0.1.3
