Draft assessing performance from old book and add questions

--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -4,6 +4,7 @@ parts:
   - caption: 1. Regression
     chapters:
       - file: regression/linear_regression/index
+      - file: regression/assessing_performance/index
   - caption: 6. Others
     chapters:
       - file: printing
