--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Install Manim 🎥
+        run: |
+          sudo apt install build-essential python3-dev libcairo2-dev libpango1.0-dev ffmpeg texlive
+          pip install manim
+
       - name: Install and Build 🔧
         run: |
           pip install -r requirements.txt
