Update build to install full latex

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Manim 🎥
         run: |
-          sudo apt install build-essential python3-dev libcairo2-dev libpango1.0-dev ffmpeg texlive
+          sudo apt install build-essential python3-dev libcairo2-dev libpango1.0-dev ffmpeg texlive-latex-extra
           pip install manim
 
       - name: Install and Build 🔧
