--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__
 
 # Ignore build output
 book_source/source/_build
+book_sources/source/**/manim_animations/**
 # On the main branch, don't include the docs folder
 docs
 
