Add variables for reference number to linear regression

--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -17,6 +17,7 @@ parse:
     - amsmath
     - dollarmath
     - html_image
+    - substitution
 
 #######################################################################################
 # HTML-specific settings
