--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click>=8.0.0
 jupyter-book>=0.13
 jupyterquiz
 jupytercards
+jupytext>=0.16
 pandas>=1.3.2
 pytablewriter==0.62.0
 scikit-learn==1.1.2
