Update SimpleAnalytics tracker

--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -28,7 +28,15 @@ html:
   use_issues_button: true
   # Kind of a hack, but I have to hardcode the GitHub URL to get this to work :(
   extra_navbar: '<a href="https://hschafer.github.io/Intro-ML/acknowledgements.html">Acknowledgements</a><br/>Powered by <a href="https://jupyterbook.org">Jupyter Book</a>'
-  extra_footer: 'Have feedback or spotted a bug? Please make a <a href="https://github.com/hschafer/Intro-ML/issues">GitHub issue</a> or contact <a href="https://homes.cs.washington.edu/~hschafer/">Hunter Schafer</a>!'
+  extra_footer: |
+    Have feedback or spotted a bug? Please make a <a href="https://github.com/hschafer/Intro-ML/issues">GitHub issue</a>
+    or contact <a href="https://homes.cs.washington.edu/~hschafer/">Hunter Schafer</a>!
+
+    <div>
+      <!-- 100% privacy friendly analytics -->
+      <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+      <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    </div>
 
   comments:
     utterances:
