--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -27,9 +27,9 @@ html:
   use_repository_button: true
   use_issues_button: true
   # Kind of a hack, but I have to hardcode the GitHub URL to get this to work :(
-  extra_navbar: '<a href="https://hschafer.github.io/Intro-ML/acknowledgements.html">Acknowledgements</a><br/>Powered by <a href="https://jupyterbook.org">Jupyter Book</a>'
+  extra_navbar: '<a href="https://hschafer.github.io/AnIML/acknowledgements.html">Acknowledgements</a><br/>Powered by <a href="https://jupyterbook.org">Jupyter Book</a>'
   extra_footer: |
-    Have feedback or spotted a bug? Please make a <a href="https://github.com/hschafer/Intro-ML/issues">GitHub issue</a>
+    Have feedback or spotted a bug? Please make a <a href="https://github.com/hschafer/AnIML/issues">GitHub issue</a>
     or contact <a href="https://homes.cs.washington.edu/~hschafer/">Hunter Schafer</a>!
 
     <div>
@@ -40,7 +40,7 @@ html:
 
   comments:
     utterances:
-      repo: "hschafer/Intro-ML"
+      repo: "hschafer/AnIML"
       issue-term: "pathname"
       label: "💬 Comments"
       theme: "preferred-color-scheme"
@@ -52,7 +52,7 @@ launch_buttons:
   binderhub_url: https://mybinder.org
 
 repository:
-  url: https://github.com/hschafer/Intro-ML
+  url: https://github.com/hschafer/AnIML
   path_to_book: book_source/source/
   branch: main
 
