--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -7,3 +7,4 @@ parts:
       - file: regression/linear_regression/index
       - file: regression/assessing_performance/index
       - file: regression/ridge/index
+      - file: regression/lasso/index
