--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ jupyter-book>=0.13
 jupyterquiz
 jupytercards
 jupytext>=0.16
+manim>=0.17.3
 pandas>=1.3.2
 pytablewriter==0.62.0
 scikit-learn==1.1.2
