TEMPORARY: Stop building vidoes to save time

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           cacheFrom: ghcr.io/hschafer/animlbook-devcontainer
           push: never
-          runCmd: make all
+          runCmd: make html
 
       - name: Deploy 🚀
         if: github.event_name == 'push'
