--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.IMAGE_REGISTRY_TOKEN }}
 
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
