--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,26 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Set up Python 🐍
-        uses: actions/setup-python@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          python-version: 3.9
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.IMAGE_REGISTRY_TOKEN }}
 
-      - name: Install Manim 🎥
-        run: |
-          sudo apt-get update
-          sudo apt install build-essential python3-dev libcairo2-dev libpango1.0-dev ffmpeg texlive-latex-extra
-          pip install manim
+      - name: Pre-build dev container image
+        uses: devcontainers/ci@v0.3
+        with:
+          imageName: ghcr.io/animlbook/animl-devcontainer
+          cacheFrom: ghcr.io/animlbook/animl-devcontainer
+          push: always
 
-      - name: Install and Build 🔧
-        run: |
-          pip install -r requirements.txt
-          make all
+      - name: 🔧 Build Book
+        uses: devcontainers/ci@v0.3
+        with:
+          cacheFrom: ghcr.io/animlbook/animl-devcontainer
+          push: never
+          runCmd: make html
 
       - name: Deploy 🚀
         if: github.event_name == 'push'
