--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy - Updated
+name: Build and Deploy
 on:
   pull_request:
     branches:
@@ -22,20 +22,27 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.IMAGE_REGISTRY_TOKEN }}
 
-      - name: Pre-build dev container image
+      # Assumes the Deploy action below leaves existing videos there :)
+      - name: "Check if animations changed"
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            manim:
+              - "manim_animations/**"
+      - name: Build Videos 🎥
+        if: steps.filter.outputs.manim == 'true'
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/animlbook/animl-devcontainer
           cacheFrom: ghcr.io/animlbook/animl-devcontainer
-          push: always
-
-      - name: 🔧 Build Book
+          push: never
+          runCmd: make manim
+      - name: Build Book (HTML) 📖
         uses: devcontainers/ci@v0.3
         with:
           cacheFrom: ghcr.io/animlbook/animl-devcontainer
           push: never
           runCmd: make html
-
       - name: Deploy 🚀
         if: github.event_name == 'push'
         uses: JamesIves/github-pages-deploy-action@4.1.4
