--- a/.github/workflows/environment.yml
+++ b/.github/workflows/environment.yml
@@ -10,6 +10,8 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
