--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -80,6 +80,8 @@ sphinx:
           "argmin": ["\\underset{#1}{\\operatorname{argmin}}", 1]
           "argmax": ["\\underset{#1}{\\operatorname{argmax}}", 1]
           "abs": ["\\lvert #1 \\rvert", 1]
+          "indicator": ["\\mathbb{\\unicode{x1D7D9}}\\left\\{ #1 \\right\\}", 1]
+
           "norm": ["\\lVert #1 \\rVert", 1]
     suppress_warnings:
       - "myst.header"
