Add draft of logistic regression chapter

--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -12,3 +12,4 @@ parts:
     numbered: True
     chapters:
       - file: classification/intro/index
+      - file: classification/logistic_regression/index
