Fix minor typo warnings in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
     "cSpell.words": [
-        "hyperparameters"
+        "Bigram",
+        "hyperparameters",
+        "ipython",
+        "jupytext",
+        "kernelspec",
+        "mathbb",
+        "multiclass",
+        "mystnb",
+        "netizen",
+        "scikit",
+        "sklearn",
+        "toarray",
+        "unigram",
+        "Vectorizer"
     ]
 }
