Add draft of bias section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "multiclass",
         "mystnb",
         "netizen",
+        "reoffend",
+        "reoffended",
         "scikit",
         "sklearn",
         "toarray",
