Add Bias/Fairness Chapter (#30)
* Fix minor typo warnings in VSCode

* Add introduction back to TOC

* Update intro to discuss bias from the beginning

* Add draft of bias section

* Update bias/fairness chapter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
     "cSpell.words": [
-        "hyperparameters"
+        "Bigram",
+        "hyperparameters",
+        "ipython",
+        "jupytext",
+        "kernelspec",
+        "mathbb",
+        "multiclass",
+        "mystnb",
+        "netizen",
+        "reoffend",
+        "reoffended",
+        "scikit",
+        "sklearn",
+        "toarray",
+        "unigram",
+        "Vectorizer"
     ]
 }
