--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -14,3 +14,4 @@ parts:
       - file: classification/intro/index
       - file: classification/logistic_regression/index
       - file: classification/bias_fairness/index
+      - file: classification/naive_bayes/index
