Draft of trees chapter

--- a/book_source/source/_toc.yml
+++ b/book_source/source/_toc.yml
@@ -15,3 +15,4 @@ parts:
       - file: classification/logistic_regression/index
       - file: classification/bias_fairness/index
       - file: classification/naive_bayes/index
+      - file: classification/trees/index
