Current draft of decision trees

--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -28,6 +28,7 @@ html:
   use_edit_page_button: true
   use_repository_button: true
   use_issues_button: true
+  use_sidenotes: true
   # Kind of a hack, but I have to hardcode the GitHub URL to get this to work :(
   extra_navbar: '<a href=" https://animlbook.github.io/AnIML/acknowledgements.html">Acknowledgements</a><br/>Powered by <a href="https://jupyterbook.org">Jupyter Book</a>'
   extra_footer: |
