--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update -qq \
         pkg-config \
         make \
         wget \
-        ghostscript 
+        ghostscript
 
 # setup a minimal texlive installation
 COPY .devcontainer/texlive-profile.txt /tmp/
@@ -34,7 +34,7 @@ RUN wget -O /tmp/install-tl-unx.tar.gz http://mirror.ctan.org/systems/texlive/tl
 
 ## End Manim Dockerfile
 
-RUN apt-get install graphviz
+RUN apt-get install --no-install-recommends -y graphviz
 
 ## Set up Env
 # ENV PATH="$HOME/.local/bin:$PATH"
