Hschafer issue 9 naive bayes decision trees (#32)
* Add naive bayes

* Draft of trees chapter

* WIP

* Current draft of decision trees

* Add Decision tree chapter

* Fix build

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -34,6 +34,8 @@ RUN wget -O /tmp/install-tl-unx.tar.gz http://mirror.ctan.org/systems/texlive/tl
 
 ## End Manim Dockerfile
 
+RUN apt-get install --no-install-recommends -y graphviz
+
 ## Set up Env
 # ENV PATH="$HOME/.local/bin:$PATH"
 
