--- a/book_source/source/_config.yml
+++ b/book_source/source/_config.yml
@@ -9,6 +9,7 @@ logo: _static/logo.png
 # Execution settings
 execute:
   execute_notebooks: cache
+  timeout: -1
 
 #######################################################################################
 # Parse and render settings
